z-index fix

--- a/front-end/src/stylus/pages/_landing.styl
+++ b/front-end/src/stylus/pages/_landing.styl
@@ -11,7 +11,7 @@
   margin-top -70px
   padding-bottom 65px
   position relative
-  z-index 50
+  z-index 20
   // &:before
   //   content ''
   //   position absolute
